--- a/styles/labrabs.css
+++ b/styles/labrabs.css
@@ -116,6 +116,11 @@ p {
     padding: 5%;
 }
 
+.ways p {
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 18px;
+}
+
 .ways input {
     width: 80%;
 }
